# ferment-constraints

./: AGENT.md  Cargo.toml  README.md
examples/: tutorial.rs
memory/: JOURNAL.md
src/: bake.rs  consortium.rs  culture.rs  lib.rs  metabolism.rs  proof.rs  starter.rs
